--- a/src/styles.css
+++ b/src/styles.css
@@ -7,11 +7,25 @@
 }
 
 
-/* .content {
-    margin: 2px;
-    border-radius: 10px;
-    border: 1px solid #fff;
-} */
+#grandparent {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+}
+
+
+
+#parent-1, #parent-2, #parent-3, #parent-4, #parent-5 {
+    flex: 3 1 0;
+    height: fit-content;
+}
+
+#parent-5 {
+    flex: 1 1 0;
+    height: fit-content;
+}
+
+
 
 .navbar {
     margin-inline: 4rem;
@@ -97,45 +111,3 @@ button {
     justify-content: center;
 }
 
-/* .some-random-information {
-    display: flex;
-    margin-inline: 4rem;
-    margin-top: 4rem;
-    padding: 1px;
-    background: #f9faf8;
-    flex-direction: column;
-    flex-wrap: wrap;
-    border: 1px solid salmon;
-}
-
-.some-random-information div {
-    flex: 1 1 0;
-    height: auto;
-    background-color: #f9faf8;
-    border: 2px solid saddlebrown;    
-} */
-
-
-/* dark background color (hero and footer)
-#1F2937;
-
-hero main text ("this website is awesome")
-48px extra-bold #f9faf8
-
-hero secondary text, header link text 
-18px #e5e7eb
-
-header logo text
-24px #f9faf8
-
-button color, call to action background color
-#3882f6 
-
-information header text
-36px extra-bold #1f2937
-
-quote section background color
-#e5e7eb
-
-quote text 
-36px light italic #1f2937 */
