--- a/src/styles.css
+++ b/src/styles.css
@@ -10,14 +10,16 @@
     flex-direction: column;
     flex-wrap: wrap;
     background-color: #1f2937;
-    border: 1px solid salmon;
+    /* border: 1px solid salmon; */
 }
-
 
 #parent-1 {
     flex: 3 1 0;
     display: flex;
-    border: 1px solid #fff;
+    /* border: 1px solid #fff; */
+}
+.p1-content {
+    padding-bottom: 14vh;
 }
 
 .navbar {
@@ -77,11 +79,11 @@
 
 button {
     background-color: #3882f6;
-    border-radius: 8px;
+    border-radius: 10px;
     height: 2rem;
     width: 6rem;
 
-    border: 1px solid rgb(151, 175, 231);
+    border: 1px solid #3882f0;
 }
 
 .content.navbar.image {
@@ -104,44 +106,75 @@ button {
 }
 
 #parent-2 {
-    display: flex;
     flex: 3 1 0;
+    display: flex;
     border: 1px solid;
-    background: #f9faf8;
+    background-color: #f9faf8; 
 }
 
 .p2-content {
     display: flex;
-    justify-items: center;
-    align-items: center;
+    flex-wrap: wrap;
+    flex: 1 1 0;
+    margin-inline: 4rem;
+    margin-top: 2px;
+    flex: 1 1 0;
     background-color: #f9faf8;
-    height: 600px;
+    /* border: 1px solid #000; */
+    padding-bottom: 14vh;
+    /* height: 30vh; */
 }
 .p2-header {
+    display: flex;
+    flex: 1 1 0;
     background-color: #f9faf8;
-    justify-items: center;
-    align-items: center;
+    justify-self: center;
+    align-self: center;
 }
 .p2-h {
+    flex: 1 1 0;
+    align-items: center;
+    justify-content: center;
     font-weight: bold;
+    font-size: 48px;
     background-color: #f9faf8;
     color: #1f2937;
+    text-align: left;
 }
-.p2-image-containers {
+
+.p2-img-containers {
+    flex: 1 1 0;
+    flex-direction: row;
+    flex-wrap: wrap;
     display: flex;
     background-color: #f9faf8;
+    height: 30vh;
 }
-.p2-image-containers div{
+.p2-img {
     flex: 1 1 0;
-    background-color: #3882f6;
-    height: 10vh;
-    border: 1px solid #3882f6;
+    display: flex;
+    background: #f9faf8;
+    height: 40vh;
+    align-items: center;
+    justify-content: space-between;
+    gap: 2vh;
+}
+.p2-sub {
+    flex: 1 1 0;
+    padding-top: 22vh;
+    padding-bottom: 2vh;
+    background-color: #f9faf8;
+    color: #1f2937;
+    border-radius: 10px;
+    height: 12vh;
+    border: 6px dotted #1f2937;
+    text-align:center;
 }
 
 #parent-3 {
     display: flex;
     flex: 3 1 0;
-    border: 1px solid;
+    /* border: 1px solid; */
     background: #e5e7eb;
 }
 .p3-content {
@@ -154,7 +187,7 @@ button {
 #parent-4 {
     display: flex;
     flex: 3 1 0;
-    border: 1px solid;
+    /* border: 1px solid; */
     background: #f9faf8;
 }
 .p4-content {
@@ -171,7 +204,7 @@ button {
     display: flex;
     justify-content: center;
     align-items: center;
-    border: 1px solid seagreen;
+    /* border: 1px solid seagreen; */
 }
 .p5-content {
     display: flex;
