--- a/src/styles.css
+++ b/src/styles.css
@@ -10,7 +10,6 @@
     flex-direction: column;
     flex-wrap: wrap;
     background-color: #1f2937;
-    /* border: 1px solid salmon; */
 }
 
 #parent-1 {
@@ -21,7 +20,6 @@
 .p1-content {
     padding-bottom: 14vh;
 }
-
 .navbar {
     margin-inline: 4rem;
     margin-top: 2px;
@@ -31,7 +29,6 @@
     align-items: flex-start;
     justify-content: space-around;
 }
-
 .header-logo {
     flex: 3 1 0;
     font-size: 24px;
@@ -39,7 +36,6 @@
     align-self: center;
     /* border: 1px solid salmon; */
 }
-
 .header-link {
     flex: 1 1 0;
     font-size: 18px;
@@ -48,7 +44,6 @@
     color: #f9faf8;
     /* border: 1px solid salmon; */
 }
-
 .content-navbar {
     margin-inline: 4rem;
     margin-top: 4rem;
@@ -58,7 +53,6 @@
     align-content: flex-start;
     /* border: 3px solid rgb(158, 147, 146); */
 }
-
 .left-side-nav {
     font-size: 48px;
     flex: 1 1 0;
@@ -70,13 +64,11 @@
     text-align: left;
     /* border: 1px solid salmon; */
 }
-
 .sub-text {
     font-size: 18px;
     color: #e5e7eb;
     text-align: left;
 }
-
 button {
     background-color: #3882f6;
     border-radius: 10px;
@@ -85,7 +77,6 @@ button {
 
     border: 1px solid #3882f0;
 }
-
 .content.navbar.image {
     flex: 1 1 0;
     justify-content: center;
@@ -97,7 +88,6 @@ button {
     height: 300px;
     /* border: 1px solid #f0f; */
 }
-
 .placeholder {
     flex: 1 1 1;
     background-color: rgb(113, 124, 137);
@@ -111,7 +101,6 @@ button {
     border: 1px solid;
     background-color: #f9faf8; 
 }
-
 .p2-content {
     display: flex;
     flex-wrap: wrap;
@@ -137,7 +126,6 @@ button {
     color: #1f2937;
     text-align: left;
 }
-
 .p2-img-containers {
     flex: 1 1 0;
     flex-direction: row;
@@ -147,7 +135,6 @@ button {
     align-items: center;
     justify-content: center;
 }
-
 .p2-img {
     flex: 1 1 0;
     display: flex;
@@ -161,8 +148,6 @@ button {
     margin-inline: 4rem;
     margin-top: 2px;
 }
-
-
 .p2-sub {
     flex: 1 1 0;
     padding-top: 42vh;
@@ -174,14 +159,12 @@ button {
     border: 6px solid #3882f0;
     text-align:center;
 }
-
 .p2-sub-image {
     color: #1f2937;
     background-color: #f9faf8;
     height: 200px;
     width: 300px;
 }
-
 .p2-cap {
     color: #1f2937;
     background-color: #f9faf8;
@@ -189,17 +172,43 @@ button {
 }
 
 #parent-3 {
+    padding: 20vh;
+    flex: 1 1 0;
     display: flex;
-    flex: 3 1 0;
-    /* border: 1px solid; */
     background: #e5e7eb;
 }
 .p3-content {
+    flex: 1 1 0;
     display: flex;
+    flex-direction: column;
     justify-items: center;
     align-items: center;
-    background-color: #f9faf8;
-    height: 600px;
+    background-color: #e5e7eb;
+    height:auto;
+}
+.p3-cite {
+    flex: 1 1 0;
+    display: flex;
+    background-color: #e5e7eb;
+}
+.p3-fig {
+    flex: 1 1 0;
+    background-color: #e5e7eb;
+    color: #1f2937;
+    font-weight: bolder;
+}
+
+.p3-p {
+    background-color: #e5e7eb;
+    color: #1f2937;
+    font-size: x-large;
+    font-weight: 100;
+}
+.p3-figc {
+    background-color: #e5e7eb;
+    color: #1f2937;
+    font-weight: bolder;
+    text-align: right;
 }
 #parent-4 {
     display: flex;
