--- a/src/styles.css
+++ b/src/styles.css
@@ -210,19 +210,56 @@ button {
     font-weight: bolder;
     text-align: right;
 }
+
 #parent-4 {
+    padding: 20vh;
+    flex: 1 1 0;
     display: flex;
-    flex: 3 1 0;
-    /* border: 1px solid; */
     background: #f9faf8;
 }
 .p4-content {
+    flex: 1 1 0;
     display: flex;
     justify-items: center;
     align-items: center;
     background-color: #f9faf8;
     height: 600px;
+    width: auto;
 }
+.p4-button-container {
+    flex: 1 1 0;
+    justify-content: center;
+    align-content: center;
+    display: flex;
+    background-color: #3882f6;
+    padding: 2rem;
+}
+.p4-button-item {
+    flex: 6 1 0;
+    display: flex;
+    flex-direction: column;
+    display: flex;
+    width: auto;
+    background-color: #3882f6;
+    margin: 1rem;
+   
+}
+.p4-h2, .p4-b-p {
+    background-color: #3882f6;
+    color: #f9faf8;
+    height: fit-content;
+}
+.p4-button-right {
+    flex: 1 1 0;
+    background-color: #3882f6;
+    border: 2px solid #f9faf8;
+    border-radius: 0.5rem;
+    height: fit-content;
+    align-self: center;
+    text-align: center;
+    margin: 1rem;
+}
+
 
 #parent-5 {
     flex: 1 1 0;
