Parent-5 done. Page is almost finished.
ToDo:
1/  fill the content;
a/  parent-1:
    -   navbar with my Logo, links to about me, projects, contact;
    -   "this website is..." to "Coding is awesome!";
    -   img-placeholder swap it with coding-img from pexels;
    -   subtext "this website has some..." to "I started coding about <date>, my biggest trophy now is..."
    -   "sign up" to "contact-me" button;

b/  parent-2:
    -   "some random information" to "my biggest projects";
    -   "there is some subtext..." to <project description>;

c/  parent-3 done;
d/  parent-4 - change txt header, p, and button;
e/  parent-5 done;

2/  fix parent-2;

--- a/src/styles.css
+++ b/src/styles.css
@@ -267,6 +267,7 @@ button {
     display: flex;
     justify-content: center;
     align-items: center;
+    height: fit-content;
     /* border: 1px solid seagreen; */
 }
 .p5-content {
@@ -274,5 +275,12 @@ button {
     justify-items: center;
     align-items: center;
     background-color: #1f2937;
-    height: 100px;
+    padding: 1rem;
+    height: fit-content;
+}
+.p5-footer {
+    flex: 1 1 0;
+    align-self: center;
+    text-align: center;
+    font-weight: 400;
 }
