--- a/src/styles.css
+++ b/src/styles.css
@@ -77,6 +77,9 @@ button {
 
     border: 1px solid #3882f0;
 }
+.parent-1-a {
+    background-color: #3882f6;
+}
 .content.navbar.image {
     flex: 1 1 0;
     justify-content: center;
