--- a/src/styles.css
+++ b/src/styles.css
@@ -10,15 +10,17 @@
     flex-direction: column;
     flex-wrap: wrap;
     background-color: #1f2937;
+    padding: 0;
 }
 
 #parent-1 {
-    flex: 3 1 0;
+    flex: 1 1 0;
     display: flex;
-    /* border: 1px solid #fff; */
+    /* padding-inline: 2rem; */
+    padding-bottom: 2rem;
 }
 .p1-content {
-    padding-bottom: 14vh;
+    padding-bottom: 2rem;
 }
 .navbar {
     margin-inline: 4rem;
@@ -34,24 +36,21 @@
     font-size: 24px;
     color: #f9faf8;
     align-self: center;
-    /* border: 1px solid salmon; */
 }
 .header-link {
     flex: 1 1 0;
     font-size: 18px;
     align-self: center;
-    justify-content: space-evenly;
+    justify-content: space-between;
+    text-align: center;
     color: #f9faf8;
-    /* border: 1px solid salmon; */
 }
 .content-navbar {
-    margin-inline: 4rem;
-    margin-top: 4rem;
+    margin-inline: 2rem; 
     padding: 1px;
     display: flex;
     flex-direction: row;
     align-content: flex-start;
-    /* border: 3px solid rgb(158, 147, 146); */
 }
 .left-side-nav {
     font-size: 48px;
@@ -60,9 +59,11 @@
     flex-wrap: wrap;
     flex-direction: column;
     align-content: center;
-    /* gap: 10px; */
     text-align: left;
-    /* border: 1px solid salmon; */
+    padding-inline: 2rem;
+}
+.p1-h1 {
+    align-items: center;
 }
 .sub-text {
     font-size: 18px;
@@ -81,6 +82,7 @@ button {
     background-color: #3882f6;
 }
 .content.navbar.image {
+    margin-top: 3.5rem;
     flex: 1 1 0;
     justify-content: center;
     align-items: center;
@@ -99,7 +101,7 @@ button {
 }
 
 #parent-2 {
-    flex: 3 1 0;
+    flex: 1 1 0;
     display: flex;
     border: 1px solid;
     background-color: #f9faf8; 
