--- a/src/styles.css
+++ b/src/styles.css
@@ -110,6 +110,7 @@ button {
     background-color: #1f2937;
     align-self: center;
     justify-content: center;
+    border-radius: 15px;
 }
 
 #parent-2 {
@@ -165,23 +166,31 @@ button {
 }
 .p2-sub {
     flex: 1 1 0;
-    padding: 1rem;
-    background-color: #f9faf8;
+    padding: 0.5rem;
+    background-color: #1f2937;
     color: #1f2937;
-    border-radius: 10px;
-    border: 6px solid #3882f0;
+    border-radius: 15px;
+    border: 4px solid #1f2937;
     text-align:center;
 }
 .p2-sub-image {
-    color: #1f2937;
-    background-color: #f9faf8;
+    background-color: #1f2937;
     height: 400px;
     width: 300px;
+    border-radius: 15px;
+}
+.p2-anchor {
+    color: #3882f0;
+    font-size: larger;
+    font-weight: bolder;
+    background-color: #1f2937;
+    text-align: center;
 }
 .p2-cap {
-    color: #1f2937;
-    background-color: #f9faf8;
-    font-size: small;
+    color: #f9faf8;
+    background-color: #1f2937;
+    font-size: medium;
+    font-weight: 400;
     padding: 1rem;
 }
 
@@ -256,7 +265,6 @@ button {
     width: auto;
     background-color: #3882f6;
     margin: 1rem;
-   
 }
 .p4-h2, .p4-b-p {
     background-color: #3882f6;
