Parent-4 size fixed. Corners rounded.
ToDo:
1/  parent-4 - fill content;
    -   Change font size;
2/  round corners of parents 2 && 3;
    -   fix margin and placement issues;
3/  make parent-1-header-links (sticky navbar)
4/  make this page responsive;

--- a/src/styles.css
+++ b/src/styles.css
@@ -3,6 +3,7 @@
     font-family: 'Roboto', sans-serif;
     color:  #f9faf8;
     text-decoration: none;
+    box-sizing: border-box;
 }
 
 #grandparent {
@@ -235,18 +236,18 @@ button {
 }
 
 #parent-4 {
-    padding: 20vh;
+    padding: 2rem;
     flex: 1 1 0;
     display: flex;
-    background: #f9faf8;
+    background: #1f2937;
 }
 .p4-content {
     flex: 1 1 0;
     display: flex;
     justify-items: center;
     align-items: center;
-    background-color: #f9faf8;
-    height: 600px;
+    background-color: #1f2937;
+    height: fit-content;
     width: auto;
 }
 .p4-button-container {
@@ -256,6 +257,8 @@ button {
     display: flex;
     background-color: #3882f6;
     padding: 2rem;
+    border-radius: 15px;
+
 }
 .p4-button-item {
     flex: 6 1 0;
